# WatchPuppy

./: .gitignore  README.md  pyproject.toml
app/: cli.py  main.py
app/api/: server.py
app/classifier/: dataset.py  infer.py  inference.py  model.py  train.py
app/core/: config.py  logging_utils.py  schemas.py
app/detection/: base.py  factory.py  hailo_hef_detector.py  mock_detector.py  opencv_dnn_detector.py
app/events/: clip_saver.py  event_extractor.py  models.py
app/features/: extractor.py
app/ingest/: factory.py  frame_source.py  mock_source.py  motion_gate.py  opencv_source.py  picamera2_source.py
app/notify/: base.py  factory.py  stdout_notifier.py  telegram_notifier.py
app/onvif/: __init__.py  events.py  probe.py
app/pipeline/: orchestrator.py
app/pose/: base.py  mock_pose_estimator.py
app/review/: draft.py  exporter.py  importer.py
configs/: app.tapo.multi.example.yaml  watchpuppy.env  watchpuppy.env.example  watchpuppy.tapo.yaml
docs/: architecture.md  data_import.md  notes.md
review_web/: README.md  __init__.py
review_web/app/: db.py  (+6 more)
scripts/: create_dataset_splits.py  create_shrink_splits.py  evaluate_current_model_on_artifacts.py  generate_yolo_shrink_snapshots.py  get_telegram_updates.py  import_watchdog_dataset.py  infer_snapshot.py  print_camera_rtsp_url.py  rebuild_picmosaic_index.py  run_cnn_inference_server.py  run_onvif_watchpuppy_pipeline.py  run_onvif_watchpuppy_service.sh  run_watchpuppy_stream_server.py  run_watchpuppy_stream_service.sh  send_telegram_test_alert.py  train_cnn.py
watchpuppy/: __init__.py  types.py
(+39 files in other folders)
