[project]
name = "watchpuppy"
version = "0.1.0"
description = "Snapshot-based CNN classifier for elderly dog failed get-up attempts"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["watchpuppy*"]
